--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -67,6 +67,12 @@ html, div, h1, p, a {
 	font-family: $font-primary;
 }
 
+// Auth
+.form > p, input, button {
+	display: flex;
+	flex-flow: column nowrap;
+}
+
 // Footer
 footer {
 	margin-top: 3em;
