--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -2,7 +2,6 @@
    v2.0 | 20110126
    License: none (public domain)
 */
-
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -22,8 +21,6 @@ time, mark, audio, video {
 	font-size: 100%;
 	font: inherit;
 	border-radius: 3px;
-	border: 1px solid #abbab2;
-	// vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
@@ -49,9 +46,8 @@ table {
 	border-spacing: 0;
 }
 
-/* Start Styles */
-
-// pallet
+/* Global Styles */
+// Pallete
 $blk: #191414;
 $night: #0E1926;
 $dk11: #2E4C6B;
@@ -60,6 +56,7 @@ $dk9: #1F4C7A;
 $dk8: #2e3833;
 $dk7: #45544c;
 $dk6: #5c7066;
+
 $md5: #738c80;
 $md4: #8fa399;
 $li3: #abbab2;
@@ -67,17 +64,10 @@ $li2: #c7d1cc;
 $li1: #e3e8e6;
 $wht: snow;
 
-// typography
+// Typography
 $font-titles: "Corben", serif;
 $title-bold: 700;
 // 	font-weight: 400;
-
-// $font-test2: "Milonga", serif;
-	// font-weight: 400;
-	// font-style: normal;
-//   .milonga-bold {
-	// font-weight: 700;
-	// font-style: normal;
 
 $font-primary: "Work Sans", sans-serif;
 // <uniquifier>: Use a unique and descriptive class name
@@ -88,16 +78,14 @@ $font-primary: "Work Sans", sans-serif;
 // 	font-style: normal;
 //   }
 
+/* Start Styles */
 html {
 	max-width: 480px;
 	margin: 16px;
-	background-color: $li1
+	background-color: $night;
 }
 
-
 div, h3, p, a, .form {
-	// margin: 0;
-	// padding: 16px 6px;
 	color: $wht;
 	background-color: $night;
 	border: 1px solid lightblue;
@@ -106,34 +94,26 @@ div, h3, p, a, .form {
 }
 
 main {
-	background-color: $dk10;
+	background-color: $dk6;
 }
 
-#root{
-	padding: 16px;
-}
-
-// nav
+// Navigation
 header {
-	background-color: $li3;
+	// background-color: $li3;
 	margin-bottom: 16px;
 	padding-bottom: 16px;
-	border: 1px solid pink;
 }
-
 h1 {
-	height: 1em;
-	margin: 0 16px 0 0;
+	height: 1.25em;
+	margin: 0 16px 16px 0;
 	font-family: $font-titles;
 	font-size: xx-large;
-	background-color: $md4;
-	color: $night;
+	color: $md4;
 }
 .nav {
 	margin-right: 10px;
 	text-decoration: none;
 	text-transform: uppercase;
-	// font-family: $font-primary;
 	font-size: small;
 	color: $wht ;
 	cursor: pointer;
@@ -196,19 +176,25 @@ article > img, h6 {
 
 // Footer
 footer {
-	margin-top: 3em;
+	margin: .25em;
+	padding: 6px;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	border: none;
 	// background-color: $dk6;
 }
 footer > p {
-	// font-family: $font-primary;
+	font-family: $font-primary;
 	font-size: x-small;
 	line-height: normal;
 	text-align: center;
+	border: none;
   }
+footer > p > a {
+	border: none;
+}
 
 /* Breakpoints */
 // Tablet
