--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -99,13 +99,13 @@ main {
 
 // Navigation
 header {
-	// background-color: $li3;
 	margin-bottom: 16px;
 	padding-bottom: 16px;
+	background-color: $night;
 }
 h1 {
 	height: 1.25em;
-	margin: 0 16px 16px 0;
+	margin: 0 16px 0 0;
 	font-family: $font-titles;
 	font-size: xx-large;
 	color: $md4;
@@ -114,6 +114,7 @@ h1 {
 	margin-right: 10px;
 	text-decoration: none;
 	text-transform: uppercase;
+	font-family: $font-primary;
 	font-size: small;
 	color: $wht ;
 	cursor: pointer;
@@ -126,6 +127,8 @@ h1 {
 	color: $li3;
 	font-weight: 900;
 }
+
+
 //
 h3 {
 	background-color: $dk7;
