--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -2,7 +2,6 @@
    v2.0 | 20110126
    License: none (public domain)
 */
-
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -21,8 +20,9 @@ time, mark, audio, video {
 	border: 0;
 	font-size: 100%;
 	font: inherit;
-	border-radius: 3px;
-	border: 1px solid #abbab2;
+	border-radius: 2px;
+	background-color: #0e1926;
+	// border: 1px solid #abbab2;
 	// vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
@@ -49,17 +49,18 @@ table {
 	border-spacing: 0;
 }
 
-/* Start Styles */
 
-// pallet
+/* Global Styles */
+// Pallete
 $blk: #191414;
-$night: #0E1926;
-$dk11: #2E4C6B;
-$dk10: #264C73;
-$dk9: #1F4C7A;
+$night: #0e1926;
+$dk11: #2e4c6b;
+$dk10: #264c73;
+$dk9: #1f4c7a;
 $dk8: #2e3833;
 $dk7: #45544c;
 $dk6: #5c7066;
+
 $md5: #738c80;
 $md4: #8fa399;
 $li3: #abbab2;
@@ -68,73 +69,113 @@ $li1: #e3e8e6;
 $wht: snow;
 
 // typography
+.corben-regular {
+	font-family: "Corben", serif;
+	font-weight: 400;
+	font-style: normal;
+  }
+.corben-bold {
+	font-family: "Corben", serif;
+	font-weight: 700;
+	font-style: normal;
+  }
+
 $font-titles: "Corben", serif;
 $title-bold: 700;
-// 	font-weight: 400;
-
-// $font-test2: "Milonga", serif;
-	// font-weight: 400;
-	// font-style: normal;
-//   .milonga-bold {
-	// font-weight: 700;
-	// font-style: normal;
-
+$title-regular: 400;
+// <weight>: 100 to 900
 $font-primary: "Work Sans", sans-serif;
-// <uniquifier>: Use a unique and descriptive class name
-// <weight>: Use a value from 100 to 900
-// .work-sans-<uniquifier> {
-// 	font-optical-sizing: auto;
-// 	font-weight: <weight>;
-// 	font-style: normal;
-//   }
+$font-bolder: 900;
+$font-bold: 600;
+$font-emphasis: 500;
+$font-regular: 300;
+$font-light: 100;
 
+
+
+/* Start Styles */
 html {
-	max-width: 480px;
 	margin: 16px;
-	background-color: $li1
-}
-
-
-div, h3, p, a, .form {
-	// margin: 0;
-	// padding: 16px 6px;
-	color: $wht;
 	background-color: $night;
-	border: 1px solid lightblue;
-	border-radius: 3px;
+	border: none;
+}
+body {
 	font-family: $font-primary;
-}
+	font-weight: $font-regular;
+	line-height: 1.18;
+	color: $wht;
 
+	border: none;
+	// border: 1px solid #abbab2;
+}
 main {
-	background-color: $dk10;
+	max-width: 350px;
+	// border: 1px solid #abbab2;
+}
+div, h3, p, a, .form {
+	border-radius: 2px;
+	// border: 1px solid #abbab2;
+}
+h3 {
+	margin-bottom: 16px;
+	font-weight: $font-emphasis;
+	text-transform: uppercase;
+	background-color: $dk8;
+}
+p {
+	margin: 16px 0;
+	// background-color: $dk11;
+}
+section {
+	margin: 16px 0;
+	// background-color: $dk6;
+}
+article {
+	margin: 16px 0;
+	// background-color: $dk9;
+}
+.row-wrap {
+	display: flex;
+	flex-flow: row wrap;
+}
+.card {
+	width: 7em;
+	margin-right: 16px;
 }
 
-#root{
-	padding: 16px;
+
+
+// Toastify
+.Toastify__toast-container {
+	border-radius: 2px;
 }
 
-// nav
+
+
+// Header
 header {
-	background-color: $li3;
 	margin-bottom: 16px;
 	padding-bottom: 16px;
-	border: 1px solid pink;
-}
 
+	border: none;
+	// background-color: $li3;
+	// border: 1px solid pink;
+}
 h1 {
-	height: 1em;
+	height: 1.25em;
 	margin: 0 16px 0 0;
 	font-family: $font-titles;
-	font-size: xx-large;
-	background-color: $md4;
-	color: $night;
+	font-size: 2.5rem;
+	color: $li2;
+	// background-color: $md4;
 }
 .nav {
 	margin-right: 10px;
 	text-decoration: none;
 	text-transform: uppercase;
-	// font-family: $font-primary;
+	font-weight: $font-emphasis;
 	font-size: small;
+	letter-spacing: .04rem;
 	color: $wht ;
 	cursor: pointer;
 	border: none;
@@ -144,42 +185,60 @@ h1 {
 }
 .nav.active {
 	color: $li3;
-	font-weight: 900;
+	font-weight: $font-bold;
 }
-//
-h3 {
-	background-color: $dk7;
-	font-weight: 900;
-	text-transform: uppercase;
-}
-p {
-	margin: 16px 0;
-	background-color: $dk11;
-}
-section {
-	margin: 16px 0;
-	background-color: $dk6;
-}
-article {
-	margin: 16px 0;
-	background-color: $dk9;
-}
-.row-wrap {
-	display: flex;
-	flex-flow: row wrap;
-}
-.card {
-	width: 7em;
-	margin-right: 16px;
 
-}
+
 
 // Auth
-.form > p, input, button {
+.form-container, form {
 	display: flex;
 	flex-flow: column nowrap;
+}
+.form > p, input, button {
+	width: 125px;
+	margin-bottom: 10px;
+	border: none;
+	// display: flex;
+	// flex-flow: column nowrap;
 	// background-color: #333;
 }
+// form > p {
+
+// }
+input {
+	height: 13px;
+	padding: 4px;
+	color: $dk11;
+	background-color: $li1;
+}
+.form-errors {
+	margin-bottom: 6px;
+	font-size: x-small;
+}
+form > button {
+	width: 133px;
+	padding: 5px;
+	background-color: $dk8;
+	color: $wht;
+	cursor: pointer;
+}
+.form-button {
+	height: 20px;
+	width: 133px;
+	cursor: pointer;
+	background-color: $dk8;
+	font-size: small;
+	color: $wht;
+}
+.form-button:hover {
+	background-color: $dk11;
+}
+#signInDiv {
+	width: 133px;
+}
+
+
 
 // Explore
 .ico {
@@ -189,18 +248,24 @@ article {
 	margin: 3px;
 	padding: 5px;
 	background: $dk8;
+	background-color: $li3;
 }
 article > img, h6 {
 	border: none;
 }
 
+
+
 // Footer
 footer {
-	margin-top: 3em;
+	margin-top: .25em;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	// position: relative;
+
+	// align-self:last baseline;
 	// background-color: $dk6;
 }
 footer > p {
@@ -208,6 +273,7 @@ footer > p {
 	font-size: x-small;
 	line-height: normal;
 	text-align: center;
+	// position: absolute;
   }
 
 /* Breakpoints */
