--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -122,7 +122,7 @@ h3 {
 	margin-bottom: 16px;
 	font-weight: $font-emphasis;
 	text-transform: uppercase;
-	background-color: $wht;
+	// background-color: $wht;
 }
 p {
 	margin: 16px 0;
@@ -143,6 +143,10 @@ article {
 .card {
 	width: 7em;
 	margin-right: 16px;
+}
+.col-nowrap {
+	display: flex;
+	flex-flow: column nowrap;
 }
 
 
@@ -201,13 +205,7 @@ h1 {
 	width: 125px;
 	margin-bottom: 11px;
 	border: none;
-	// display: flex;
-	// flex-flow: column nowrap;
-	// background-color: #333;
 }
-// form > p {
-
-// }
 .input-group {
 	display: flex;
 	flex-flow: row nowrap;
@@ -251,7 +249,17 @@ form > button {
 	width: 133px;
 }
 .profile {
-	text-transform: uppercase;
+	padding: 4px;
+	margin: 5px 5px 11px 0;
+}
+.view > p {
+	margin: 6px 0 3px 0;
+}
+.profile-user {
+	font-weight: $font-emphasis;
+}
+.text-asis {
+	text-transform: none;
 }
 
 
@@ -279,19 +287,28 @@ footer {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	// position: relative;
 
 	// align-self:last baseline;
 	// background-color: $dk6;
 }
 footer > p {
-	// font-family: $font-primary;
+	margin: 10px 16px;
 	font-size: x-small;
 	line-height: normal;
 	text-align: center;
 	// position: absolute;
   }
-
+.footer-link {
+	color: $dk10;
+	text-decoration: none;
+	font-weight: $font-emphasis;
+}
+.footer-link:active {
+	color: $li2;
+}
+.footer-link:hover {
+	color: $wht;
+}	
 /* Breakpoints */
 // Tablet
 @media only screen and (min-width: 481) {
