--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -67,7 +67,7 @@ $li3: #abbab2;
 $li2: #c7d1cc;
 $li1: #e3e8e6;
 $wht: snow;
-$warn: #cc3333;
+$warn: #a32929;
 
 // typography
 .corben-regular {
@@ -107,43 +107,31 @@ body {
 	color: $night;
 
 	border: none;
-	// border: 1px solid #abbab2;
 }
 main {
 	max-width: 350px;
 	padding: 3px;
-	border: 1px solid $night;
+	// border: 1px solid $night;
 }
 div, h3, p, a, .form {
 	border-radius: 2px;
-	// border: 1px solid #abbab2;
 }
 h3 {
 	margin-bottom: 16px;
 	font-weight: $font-emphasis;
 	text-transform: uppercase;
-	// background-color: $wht;
 }
 p {
 	margin: 16px 0;
-	// background-color: $dk11;
-}
-section {
-	margin: 16px 0;
-	// background-color: $dk6;
 }
 article {
 	margin: 16px 0;
-	// background-color: $dk9;
 }
 .row-wrap {
 	display: flex;
 	flex-flow: row wrap;
 }
-.card {
-	width: 7em;
-	margin-right: 16px;
-}
+
 .col-nowrap {
 	display: flex;
 	flex-flow: column nowrap;
@@ -265,19 +253,35 @@ form > button {
 
 
 // Explore
+section {
+	margin: 16px 0 25px 0;
+	// border: 1px solid $night;
+}
+.list {
+	margin: 0;
+	padding: 0;
+}
 .ico {
-	width: 65px;
-	height: 65px;
-	border: none;
-	margin: 3px;
+	width: 55px;
+	height: 55px;
+	margin: 3px 3px 0 3px;
 	padding: 5px;
-	background: $dk8;
-	background-color: $li3;
-}
-article > img, h6 {
+	background-color: $dk6;
 	border: none;
 }
-
+h6 {
+	margin: 0;
+	text-align: center;
+	font-variant-caps: all-small-caps;
+	font-weight: $font-emphasis;
+	color: $li1;
+	background-color: $dk6;
+}
+.list > div {
+	margin: 0 8px 8px 0;
+	background-color: $dk6;
+	cursor: pointer;
+}
 
 
 // Footer
@@ -287,16 +291,12 @@ footer {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-
-	// align-self:last baseline;
-	// background-color: $dk6;
 }
 footer > p {
 	margin: 10px 16px;
 	font-size: x-small;
 	line-height: normal;
 	text-align: center;
-	// position: absolute;
   }
 .footer-link {
 	color: $dk10;
@@ -308,7 +308,8 @@ footer > p {
 }
 .footer-link:hover {
 	color: $wht;
-}	
+}
+
 /* Breakpoints */
 // Tablet
 @media only screen and (min-width: 481) {
